--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="footer-section">
                 <h3>Redes Sociais</h3>
                 <div class="social-icons">
-                    <a href="https://t.me/@dicas_da_lima"><i class="fab fa-instagram"></i></a>
+                    <a href="https://instagram.com/dicas_da_lima"><i class="fab fa-instagram"></i></a>
                     <a href="https://t.me/dicas_da_lima"><i class="fab fa-telegram"></i></a>
                 </div>
                 <p>Siga-nos para ficar por dentro das últimas promoções!</p>
@@ -183,3 +183,4 @@
     </footer>
 </body>
 </html>
+
