--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
         <!-- Produtos em Destaque -->
         <h2 class="section-title" id="products">Destaques da Semana</h2>
         <div class="products-grid">
+            <!-- Exemplo de Produto - Furadeira Sem Fio -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="https://i.ibb.co/5h59tNQ0/imagem-2025-08-29-174847991.png" alt="Furadeira Sem Fio 20V">
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">exemplo de produto</h3>
+                    <p class="product-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, autem maxime quod repellat ad doloremque cupiditate? Laborum adipisci eos sunt illum id explicabo, nihil, saepe soluta, dolore fuga asperiores numquam?</p>
+                    <div class="product-price">R$ 10,90</div>
+                    <div class="product-link">
+                        <a href="https://www.amazon.com.br/Deixe-ser-pobre-conquistar-independência-ebook/dp/B0C6WBQ8YT?_encoding=UTF8&content-id=amzn1.sym.c714613e-4377-4b81-ae7b-7039fb5d4337&dib=eyJ2IjoiMSJ9.zi0LljU7FYdBjauMhZDyw6QedNgdh1t049EaFAO0fmJsScLLzw8EbID9-DDEX_QSa_znkY75rVlU0MfMN3V1KeK6j7-fctDz1mDyQ6bxqIJxDpuu_ezyMwhaS56TtzqjU-MKWEptmyOi11PafD4ig80mHKVq5RAObjn9BRMBU-m9eaQ1rk5lcZ9V7ZjB-9uQPnLHKRtk1mxpPDiQepSlKuscoORCX_zb48XAorh2kfg.GZpvk_oqpkQ82bDekmnOLXwfiYgq_ePiOHD1R6CFv4g&dib_tag=se&pd_rd_r=d04fb7b7-b0c2-42af-91ee-219bd703a949&pd_rd_w=BJjxC&pd_rd_wg=ltjRw&qid=1756500426&rnid=9365390011&s=digital-text&sr=1-3" class="btn" target="_blank">tudo pode ser alterado</a>
+                    </div>
+                </div>
+            </div>
             <!-- Produto 1 - EXEMPLO DE CLASSE REUTILIZÁVEL -->
             <div class="product-card">
                 <div class="product-image">
@@ -161,8 +175,8 @@
             <div class="footer-section">
                 <h3>Redes Sociais</h3>
                 <div class="social-icons">
-                    <a href="https://instagram.com/dicas_da_lima"><i class="fab fa-instagram"></i></a>
-                    <a href="https://t.me/dicas_da_lima"><i class="fab fa-telegram"></i></a>
+                    <a href="https://instagram.com/dicas_da_lima" rel="noopener"><i class="fab fa-instagram"></i></a>
+                    <a href="https://t.me/dicas_da_lima" rel="noopener"><i class="fab fa-telegram"></i></a>
                 </div>
                 <p>Siga-nos para ficar por dentro das últimas promoções!</p>
             </div>
@@ -183,4 +197,3 @@
     </footer>
 </body>
 </html>
-
